# ps_parprog_2021

./: .gitignore  CMakeLists.txt  lcc2_tutorial.md  readme.md
01/: Makefile  profiler.sh  readme.md
01/data/: fast.txt  medium.txt  slow.txt
01/lcc2/: note.txt  plotter.py
01/task2/: Makefile  profiler.sh  readme.md
01/task2/data/: fast.txt  medium.txt  slow.txt
01/task2/data/new/: fast.txt  medium.txt  slow.txt
01/task2/data/new2/: fast.txt  medium.txt  slow.txt
01/task2/lcc2/: fast.txt  latex.mplstyle  medium.txt  plotter.py  slow.txt
02/: README.md
02/task1/: Makefile  mandelbrot.c  remarks.txt  stb_image_write.h
02/task2/: Makefile  hadamard1.c  hadamard2.c  remarks.txt
02/task3/: Makefile  common.h  piParallel  piParallel.c  piSerial  piSerial.c  plot.py  remarks.txt
03/: README.md
03/task1/: Makefile  README.md  jobscript.sh  plot.py  profiler.sh  task1.c  task2.c  task3.c
03/task1/data/: task1.txt  task2.txt  task3.txt
03/task1/data_local/: task1.txt  task2.txt  task3.txt
03/task2/: Makefile  README.md  jobscript.sh  results.txt  task2.c
03/task3/: Makefile  jobscript.sh  merge_sort_iter  merge_sort_iter.c  merge_sort_parallel  merge_sort_parallel.c  results.txt
04/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ps_parprog_2021.cbp
04/task1/: example.c  jobscript.sh
04/task2/: flush.c  test.sh
04/task3/: jobscript.sh  merge_recursive.c
05/: CMakeLists.txt  README.md
05/task1/: dellanoy.c  dellanoy_sequential.c  jobscript.sh
06/: CMakeLists.txt  README.md
06/task1/: jobscript.sh  task1.c  task1_parallel.c
06/task2/: jobscript.sh  task2.c  task2_parallel.c
07/: CMakeLists.txt  Makefile  README.md
07/task1/: jobscript.sh  task1  task1.c  task1_vec
07/task1/lcc2_results/: plot_results.py  results_parallel_05_05_2021-18_55_12.txt  results_sequential_05_05_2021-18_33_03.txt
07/task2/: jobscript.sh  task2  task2.c
07/task2/lcc2_results/: plot_results.py  results_parallel_10_05_2021-16_06_30.txt
07/task3/: exec.sh  jobscript.sh  task3  task3.c
07/task3/lcc2_results/: explanation.txt  plot_results.py  results_parallel_10_05_2021-16_08_25.txt
08/: Makefile  README.md  analysis.c  task1.txt  task2.txt  task3.txt
09/: README.md  task1.txt
10/: README.md
11/: README.md
12/: .gitignore  Makefile  README.md  analytically_stable.c  equation_of_motion.c  equation_of_motion.h  jobscript.sh  main.c  main.h  main_parallel.c  run.sh  vector_operations.c  vector_operations.h
12/data/: .gitignore  environment.yml  latex.mplstyle  plot.py
13/: Makefile  mm  mm_parallel  mm_parallel.c  notes.md  sketch.txt
