#cmake_minimum_required(VERSION 3.19)
#project(ps_parprog_2021 C)

#set(CMAKE_C_STANDARD 11)

#include_directories(02/mandelbrot)
#include_directories(02/task1)
#include_directories(02/task3)
#include_directories(example_makefile)

#add_executable(ps_parprog_2021
#        01/task2/fast.c
#        01/task2/medium.c
#        01/task2/slow.c
#        02/mandelbrot/mandelbrot.c
#        02/mandelbrot/stb_image_write.h
#        02/task1/mandelbrot.c
#        02/task1/stb_image_write.h
#        02/task2/hadamard1.c
#        02/task2/hadamard2.c
#        02/task3/common.h
#        02/task3/piParallel.c
#        02/task3/piSerial.c
#        03/task1/task1.c
#        03/task1/task2.c
#        03/task1/task3.c
#        03/task2/ex2.c
#        03/task2/task2.c
#        03/task3/merge_sort_iter.c
#        03/task3/merge_sort_parallel.c
#        example_makefile/common.c
#        example_makefile/common.h
#        example_makefile/program1.c
#        example_makefile/program2.c)
